백그라운드 색 수정

--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 24px;
-  background-color: #fdfcf0;
+  background-color: #FFF;
   border: 1px solid #ddd;
   border-bottom: none;
   border-top-left-radius: 10px;
