--- a/src/components/games/CardPick.css
+++ b/src/components/games/CardPick.css
@@ -143,16 +143,18 @@
 /* 버튼별 색상 */
 .action-btn.retry {
   background-color: #f0f0f0;
-  color: #555;
+  color: #4e342e;
   border: 1px solid #ccc;
 }
 
 .action-btn.flip-all {
-  background-color: #5c6bc0; /* 보라색 계열 */
+  background-color: #8d6e63; /* 보라색 계열 */
 }
 
 .action-btn.result {
-  background-color: #e67e22; /* 오렌지색 계열 */
+  background-color: #FFF; 
+  border: 1px solid #8d6e63;
+  color: #4e342e/* 오렌지색 계열 */
 }
 
 
