버튼 반응 수정

--- a/src/components/games/SeatPick.css
+++ b/src/components/games/SeatPick.css
@@ -142,7 +142,7 @@
 }
 
 .seat-pick-page .reset-assign-btn:hover {
-    background-color: #a1887f;
+    background-color: #cebcb4;
     color: white;
 }
 
